--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "youtube-clone": {
+    "angular-chat-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/youtube-clone",
+            "outputPath": "dist/angular-chat-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -61,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "youtube-clone:build"
+            "browserTarget": "angular-chat-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "youtube-clone:build:production"
+              "browserTarget": "angular-chat-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "youtube-clone:build"
+            "browserTarget": "angular-chat-app:build"
           }
         },
         "test": {
@@ -109,16 +109,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "youtube-clone:serve"
+            "devServerTarget": "angular-chat-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "youtube-clone:serve:production"
+              "devServerTarget": "angular-chat-app:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "youtube-clone"
+  "defaultProject": "angular-chat-app"
 }
